# alpha-clustering

./: .gitignore  .readthedocs.yaml  README.md  _test.ipynb  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  run_datasets.sh  time_experiment.py  utils.py
.github/workflows/: run_tests.yaml  tests.yaml
config/: settings.json
data/points/: 2d-20c-no0.arff  aggregation.arff  bio-protein.arff  bio-protein.csv  chainlink.arff  complex9.arff  golf-ball.arff  hypercube.arff  random-1.csv  sphere_dense_pts_1.csv  sphere_dense_pts_10.csv  sphere_dense_pts_11.csv  sphere_dense_pts_12.csv  sphere_dense_pts_13.csv  sphere_dense_pts_14.csv  sphere_dense_pts_15.csv  sphere_dense_pts_16.csv  sphere_dense_pts_17.csv  sphere_dense_pts_18.csv  sphere_dense_pts_19.csv  sphere_dense_pts_2.csv  sphere_dense_pts_20.csv  sphere_dense_pts_3.csv  sphere_dense_pts_4.csv  sphere_dense_pts_5.csv  sphere_dense_pts_6.csv  sphere_dense_pts_7.csv  sphere_dense_pts_8.csv  sphere_dense_pts_9.csv  st900-2-9.arff  tesseract.arff  test_2.arff  test_3.arff
docs/: index.rst  requirements.txt
docs/source/: alpha_clustering.rst  conf.py  index.rst
docs/source/usage_examples/: usage.ipynb
experiment_scripts/: glaciar_clustering.py  glacier_clustering.py  sensitivity.py  sensitvity.py  time_experiment.py
src/: alpha_shape.py  cluster.py  config.py  exceptions.py  io_handler.py  loader.py  logger.py  plot.py  test.ipynb
src/alpha_clustering/: alpha_complex.py  alpha_shape.py  cluster.py  config.py  exceptions.py  io_handler.py  logger.py  plot.py
tests/: test_alpha_shape.py
