[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "alpha_clustering"
version = "1.0.0"
authors = [
    {name = "Anirudh Bhashyam"}
]
description = "Clustering data using alpha shapes."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[project.urls]
"github" = "https://github.com/anirudhbhashyam/alpha-clustering"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=alpha_clustering"
testpaths = [
    "tests"
]