[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "alpha_clustering"
version = "1.0.15"
authors = [
    {name = "Anirudh Bhashyam"}
]
description = "Clustering data using alpha shapes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn >= 1.1.0",
    "pandas >= 1.5.0",
    "numpy >= 1.23.0",
    "scipy >= 1.9.3",
    "matplotlib >= 3.6.0",
    "seaborn >= 0.12.0",
    "jinja2 >= 3.1.0"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[project.optional-dependencies]
tests = [
    "pytest >= 7.0.0"
]
docs = [
    "sphinx >= 5.3.0",
    "furo >= 2022.9.0"
]


[project.urls]
"github" = "https://github.com/anirudhbhashyam/alpha-clustering"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]